# aikey-cli

./: ## AiKey CLI Specification (Phase 2).md  ## AiKey Configuration & Terminology Spe.md  .gitignore  AiKey-CLI-v0.2-Checklist.md  AiKey-CLI-v0.2-Engineering-Spec.md  CLI_SPEC.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  Makefile  Minimal-example-1.json  README.md  README.zh.md  REVIEW-TODO-proxy-lifecycle.md  SECURITY.md  TECHNICAL_DEBT_RESOLUTION.md  TEST_ARCHITECTURE.md  UPDATE_COMMAND_STATUS.md  USAGE_SCENARIOS.md  USER_MANUAL.md  audit_day3.sh  build.rs  build_debug.sh  diagnose.sh  reset_and_push.sh  test20260216_status.md  test_complete.sh  test_env.sh  test_fresh_db.sh  test_ghost_exec.sh  test_stderr  test_stderr.rs  test_update.sh
.cargo/: config.toml
aikey-sdk/: Cargo.toml
aikey-sdk/examples/: basic.rs
aikey-sdk/src/: adapters.rs  lib.rs
data/: provider_fingerprint.yaml  provider_registry.yaml
docs/: VAULT_SPEC.md  cli-platform-contract.md  json-password-implementation-summary.md  json-password-prompts.md
examples/: json-password-prompt.sh
scripts/: e2e-dashboard.sh  probe-kimi-receipt.sh  probe-statusline.sh
src/: activate_tests.rs  active_env_migration.rs  audit.rs  cli.rs  commands_account.rs  commands_env.rs  commands_import.rs  commands_init.rs  commands_project.rs  commands_proxy.rs  commands_statusline.rs  commands_watch.rs  config.rs  core.rs  credential_type.rs  crypto.rs  daemon.rs  daemon_client.rs  env_renderer.rs  env_resolver.rs  error_codes.rs  events.rs  executor.rs  global_config.rs  json_output.rs  lib.rs  local_server_probe.rs  main.rs  migrations.rs  native_host.rs  native_host.rs.removed  observability.rs  platform_client.rs  profile_activation.rs  profiles.rs  prompt_hidden_windows.rs  provider_registry.rs  providers.rs  proxy_env.rs  proxy_events.rs  (+20 more)
src/commands_account/: mod.rs  shell_integration.rs  shell_integration_windows.rs
src/commands_account/lifecycle/: audit.rs  event.rs  mod.rs
src/commands_auth/: mod.rs
src/commands_internal/: hook_op.rs  init.rs  internal_log.rs  mod.rs  parse.rs  protocol.rs  query.rs  rules.rs  stdin_json.rs  tests.rs  update_alias.rs  vault_op.rs
src/commands_internal/parse/: CRF_ARCHITECTURE.md  candidate.rs  crf.rs  line_class.rs  provider_fingerprint.rs  rule.rs  rule_anchored.rs  rule_labeled.rs  rule_pem.rs  rule_title.rs  tokenize.rs  v41_guards.rs
src/commands_internal/parse/grouping/: block.rs  cluster.rs  enrich.rs  mod.rs  types.rs
src/connectivity/: mod.rs  runtime.rs  targets.rs
src/templates/: hook.bash  hook.ps1  hook.zsh
tests/: .env.example  cortex_stress_test.rs  e2e_activate_eval.rs  e2e_proxy_lifecycle.rs  e2e_proxy_lifecycle_v6.rs  e2e_route_activate_consistency.rs  e2e_route_output.rs  e2e_run_command.rs  e2e_smoke_tests.rs  e2e_vault_security_regression.rs  feature_tests.rs  ghost_exec_test.rs  import_recall.rs  integration_test.rs  internal_ipc.rs  json_output_test.rs  migration_e2e_personal_test.rs  phase2_integration_test.rs  phase3_multi_provider_test.rs  platform_api_test.rs  prefix_rename_invariants_test.rs  profile_activation_test.rs  profile_storage_test.rs  project_command_test.rs  run_env_binding_test.rs  synapse_audit.rs  synapse_stress_test.rs  team_token_normalize_test.rs  upgrade_active_env_e2e_test.rs  v03_integration_test.rs
tests/archive/: README.md  feature_tests.rs.bak  ghost_exec_test.rs.bak  synapse_audit.rs.bak
tests/fixtures/: team_token_normalize.json  v41_spike_baseline.json
tests/fixtures/samples/: 20260422-批量导入-样例-URL列表式.txt  20260422-批量导入-样例-个人收藏-桃子.txt  20260422-批量导入-样例-团队交接-英文.txt  20260422-批量导入-样例-用户笔记.txt  20260422-批量导入-样例-社群收集-乱序.txt  20260422-批量导入-样例-程序员日常-阿明.txt  multi-pwd.jsonl
tests/lifecycle_fixtures/mock_proxy/: go.mod  main.go
tests/testdata/: adversarial.jsonl  in_dist.jsonl  ood_apikey.jsonl  ood_layouts.jsonl  ood_realworld.jsonl  train.jsonl
