[package]
name = "aikeylabs-ak"
version = "0.2.0"
edition = "2021"
authors = ["AiKey Founder <aikeyfounder@gmail.com>"]
description = "Secure local-first secret management CLI tool"
license = "Apache-2.0"
repository = "https://github.com/AiKey-Founder/aikey-labs"
keywords = ["aikeylabs", "ak", "core", "key-management", "cli-utilities"]
categories = ["command-line-utilities"]

[lib]
name = "aikeylabs_ak"
path = "src/lib.rs"

[[bin]]
name = "ak"
path = "src/main.rs"

[[bin]]
name = "aikey"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive"] }

# Database
rusqlite = { version = "0.29", features = ["bundled"] }

# Cryptography and hashing
argon2 = "0.5"      # Password hashing with Argon2id
aes-gcm = "0.10"    # AES-GCM authenticated encryption
rand = "0.8"        # Cryptographically secure random number generation
secrecy = "0.8"     # Memory-safe secret handling, prevents leakage in logs
zeroize = { version = "1.8", features = ["derive", "serde"] }     # Explicit memory zeroing for sensitive data
inquire = "0.7"     # Interactive password prompts with secure input
arboard = "3.4"     # Clipboard access for Magic Add feature
rpassword = "7.3"   # Secure password input without echo
hmac = "0.12"       # HMAC for integrity verification
sha2 = "0.10"       # SHA-256 for HMAC
hex = "0.4"         # Hex encoding for HMAC display
bincode = "1.3"     # Binary serialization for .akb format
serde = { version = "1.0", features = ["derive"] }  # Serialization framework
serde_json = "1.0"  # JSON serialization for export/import
serde_yaml = "0.9"  # YAML serialization for config files
base64 = "0.21"     # Base64 encoding for JSON export
shell-words = "1.1" # Shell command parsing for run command
ctrlc = "3.4"       # Signal handling for graceful shutdown
rayon = "1.8"       # Parallel iteration for performance
dirs = "5.0"        # Home directory detection for config files

[target.'cfg(unix)'.dependencies]
libc = "0.2"        # System calls for mlock (memory pinning)

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Memory", "Win32_Foundation"] }

[dev-dependencies]
assert_cmd = "2.0"      # Test CLI applications
predicates = "3.0"      # Assertions for command output
tempfile = "3.8"        # Temporary directories for isolated tests
serde_json = "1.0"      # JSON parsing for metadata tests
