[workspace]
members = [".", "aikey-sdk"]

[package]
name = "aikeylabs-aikey-cli"
version = "1.0.5-alpha"
edition = "2021"
authors = ["AiKey Founder <aikeyfounder@gmail.com>"]
description = "Secure local-first secret management CLI tool"
license = "Apache-2.0"
repository = "https://github.com/aikeylabs/aikey-cli"
keywords = ["aikeylabs", "aikey", "cli", "key-management", "cli-utilities"]
categories = ["command-line-utilities"]

[lib]
name = "aikeylabs_aikey_cli"
path = "src/lib.rs"

[[bin]]
name = "aikey"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive"] }

# Database
rusqlite = { version = "0.29", features = ["bundled"] }

# Cryptography and hashing
argon2 = "0.5"      # Password hashing with Argon2id
aes-gcm = "0.10"    # AES-GCM authenticated encryption
rand = "0.8"        # Cryptographically secure random number generation
secrecy = "0.8"     # Memory-safe secret handling, prevents leakage in logs
zeroize = { version = "1.8", features = ["derive", "serde"] }     # Explicit memory zeroing for sensitive data
arboard = "3.4"     # Clipboard access for Magic Add feature
rpassword = "7.3"   # Secure password input without echo
hmac = "0.12"       # HMAC for integrity verification
sha2 = "0.10"       # SHA-256 for HMAC
regex = "1.11"      # Text pattern matching (commands_internal/parse.rs)
bitflags = "2"      # LineFlags 属性矩阵 (parse/line_class.rs, v4.1 spike 迁移 Stage 1)
crfs = "0.4"        # Pure-Rust CRFsuite port (Stage 3 parse Layer 2; ablation-spike verified determinism)
serde_yaml = "0.9"  # Provider fingerprint registry (Stage 3 parse Layer 3; embedded via include_str!)
md-5 = "0.10"       # MD5 for Kimi session_dir lookup (matches kimi-cli's WorkDirMeta hash)
hex = "0.4"         # Hex encoding for HMAC display
bincode = "1.3"     # Binary serialization for .akb format
serde = { version = "1.0", features = ["derive"] }  # Serialization framework
serde_json = "1.0"  # JSON serialization for export/import
base64 = "0.21"     # Base64 encoding for JSON export
shell-words = "1.1" # Shell command parsing for run command
colored = "2.1"     # ANSI terminal colors; auto-disabled on non-TTY / NO_COLOR
ureq = { version = "2.10", features = ["tls", "json"] } # Blocking HTTP client for control-service API calls
ctrlc = { version = "3.4", features = ["termination"] }       # Signal handling for graceful shutdown — `termination` feature also catches SIGTERM (needed by `aikey proxy start --foreground` to forward systemd/launchd stop signals to the proxy child, Round-15 install-script fix #1a)
rayon = "1.8"       # Parallel iteration for performance
dirs = "5.0"        # Home directory detection for config files
keyring = "2"       # OS keychain access for session password cache (macOS/Windows/Linux)
atty = "0.2"        # TTY detection to skip interactive prompts in CI/non-interactive contexts
crossterm = "0.28"  # Cross-platform terminal control for `aikey watch` TUI
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
                    # Filesystem watcher for watch's live WAL tailing.  Only the
                    # FSEvents backend is compiled in; on Linux we fall back to
                    # the built-in poll watcher which is activated automatically.
fs2 = "0.4"         # Cross-platform advisory file locking (proxy_lifecycle.rs:
                    # ~/.aikey/run/proxy.lock to serialize start/stop/restart;
                    # process exit auto-releases via OS, even on SIGKILL).

[target.'cfg(unix)'.dependencies]
libc = "0.2"        # System calls for mlock (memory pinning)

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_System_Memory",     # mlock-equivalent memory pinning
    "Win32_Foundation",        # HANDLE / CloseHandle / FILETIME
    "Win32_System_Threading",  # OpenProcess / QueryFullProcessImageNameW / GetProcessTimes (proxy_proc.rs)
    "Win32_System_Time",       # FileTimeToSystemTime / SystemTimeToTzSpecificLocalTime (commands_statusline.rs event_time_hm Windows variant)
] }

[dev-dependencies]
assert_cmd = "2.0"      # Test CLI applications
predicates = "3.0"      # Assertions for command output
tempfile = "3.8"        # Temporary directories for isolated tests
serde_json = "1.0"      # JSON parsing for metadata tests
